--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "file-type": "^16.0.1",
+    "gif-frames": "^1.0.1",
     "node-fetch": "^2.6.1",
-    "pgn-parser": "^2.0.0",
     "winston": "^3.3.3"
   }
 }
